--- a/django_project/staticfiles/django_ckeditor_5/ckeditor_custom.css
+++ b/django_project/staticfiles/django_ckeditor_5/ckeditor_custom.css
@@ -1,6 +1,8 @@
 @media (prefers-color-scheme: dark) {
-    .ck.ck-editor {
-        color: black;
+    .ck.ck-editor__main>.ck-editor__editable
+    {
+        color: #fff;
+        background-color: black;
     }
 
     :root {
